# duqling_py

./: README.md  __init__.py  duqling.py  duqling_python.py  pyproject.toml  utils.py
duqling_py/: LICENSE  MANIFEST.in  __init__.py  duqling.py  duqling_r.py  requirements-dev.txt  sampling.py  utils.py
duqling_py/functions/: Gfunctions.py  __init__.py  banana.py  beam_deflection.py  borehole.py  borehole_low_fidelity.py  cantilever.py  constant_fn.py  crater.py  cubes.py  detpep_curve.py  dms.py  dts_sirs.py  ebola.py  forrester1.py  foursquare.py  friedman.py  gamma_mix.py  grlee.py  ignition.py  ishigami.py  lim.py  micwicz.py  mock_ignition.py  oakley_ohagan.py  ocean_circ.py  onehundred.py  otl_circuit.py  park.py  permdb.py  piston.py  pollutant.py  pollutant_uni.py  rabbits.py  ripples.py  robot.py  run_sim_study.py  run_sim_study_data.py  sharkfin.py  short_column.py  (+9 more)
functions/: Gfunctions.py  __init__.py  banana.py  borehole.py  borehole_low_fidelity.py  cantilever.py  constant_fn.py  crater.py  dts_sirs.py  ebola.py  ignition.py  ocean_circ.py  otl_circuit.py  park.py  piston.py  pollutant.py  pollutant_uni.py  ripples.py  robot.py  short_column.py  squiggle.py  sulfur.py  twin_galaxies.py
tests/: duqling.py  duqling_interface.py  duqling_py_interface.py  duqling_r.py  duqling_r_interface.py  interface_behavior_tests.ipynb  pbt_func_equivalence.ipynb  plotting_3d_funcs.ipynb  quack.R  test_deterministic.py  test_quack.py  test_stochastic.py
